# cantera-practice

./: README.md  example.ipynb  pyproject.toml  webb.ipynb  webb_o2_sweep.ipynb  webb_o2_sweep_calc.ipynb  webb_o2_sweep_control.ipynb  webb_t_sweep.ipynb
data/: full_A_rh-oh_p1v0_calc.yaml  full_A_rh-oh_p1v0_control.yaml  webb_concentrations.csv  webb_cyclopentane.inp  webb_cyclopentane.yaml  webb_o2_sweep_calc.csv  webb_o2_sweep_control.csv  webb_reference.csv
src/cantera_practice/: __init__.py  reactors.py
