[project]
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "cantera-practice"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cantera_practice = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
cantera = ">=3.1.0,<4"
numpy = ">=2.2.1,<3"
scipy = ">=1.15.0,<2"
jupyter = ">=1.1.1,<2"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.10.0,<4"
polars = ">=1.17.1,<2"
